[tool.poetry]
name = "tempo-async"
version = "0.1.0"
description = ""
authors = ["Nicholas Ballard <nicholasericballard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
nest-asyncio = "^1.5.4"
pytest-asyncio = "^0.16.0"
ipykernel = "^6.6.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
